<resources>
    <string name="app_name">Wipet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="OR">OR</string>
    <string name="google">Google</string>
    <string name="divider">"  "</string>
    <string name="facebook">Facebook</string>
    <string name="dont_have_an_account">Don\'t have and account ?</string>
    <string name="home">Home</string>
    <string name="discussion">Discussion</string>
    <string name="adopt">Adoption</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="adoption">Adoption</string>
    <string name="cats">Cat</string>
    <string name="view_all">View All</string>
    <string name="title_discus_horizontal_item">Why cats always sneeze?</string>
    <string name="ferrianrp">ferrianrp</string>
    <string name="a_day_ago">1 day ago</string>
    <string name="count_like">120</string>
    <string name="more">More</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="why_cats_always">Why cats always sneeze?</string>
    <string name="dog">Dog</string>
    <string name="bird">Bird</string>
    <string name="sugar_glider">Sugar Glider</string>
    <string name="snake">Snake</string>
    <string name="reply">Reply...</string>
    <string name="jakarta">Jakarta</string>
    <string name="comma">,</string>
    <string name="date">23 March 2020</string>
    <string name="divider_line">|</string>
    <string name="time">12.30</string>
    <string name="comment">"banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya bangdiskusinya banget diskusinya banget diskusinya banget diskusinya banget didiskusinya banget diskusinya banget diskusinya banget diskusinya banget didiskusinya banget diskusinya banget diskusinya banget diskusinya banget didiskusinya banget diskusinya banget diskusinya banget diskusinya banget diet diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya banget diskusinya "</string>
    <string name="create_discussion">Create Discussion</string>
    <string name="publish">Publish</string>
    <string name="title">Title...</string>
    <string name="your_content">Your content...</string>
    <string name="add_images">Add Images</string>
    <string name="create_adopt">Create Adoption</string>
    <string name="name_cat">Shiro</string>
    <string name="anggora">Anggora</string>
    <string name="harga">Rp. 5.000.000</string>
    <string name="find_pets_you_want">Find a pet you want</string>
    <string name="category">Category</string>
    <string name="pets_category">Pets Category</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="animal_age">Animal Age</string>
    <string name="month">Month</string>
    <string name="age">13</string>
    <string name="choose_size">Choose Size</string>
    <string name="medium">Medium</string>
    <string name="animal_sex">Animal Sex</string>
    <string name="background_story">Background Story</string>
    <string name="description">Description</string>
    <string name="medical_notes">Medical Notes</string>
    <string name="more_detail">More Details :</string>
    <string name="vaccinate">Vaccinated</string>
    <string name="friendly_with_kids">Friendly with kids</string>
    <string name="neutered">Neutered</string>
    <string name="upload">Upload</string>
    <string name="count_request">21</string>
    <string name="request">Request</string>
    <string name="show_cv">Show CV</string>
    <string name="jawa_barat">Jawa Barats</string>
    <string name="depok">Depoks</string>
    <string name="cv_adopt">CV Adoption</string>
    <string name="ferrian_r_p">Ferrian Redhia Pratama</string>
    <string name="i_am_a">"I am a "</string>
    <string name="student">Student</string>
    <string name="alasan_adopsi">Alasan mengadopsi hewan</string>
    <string name="location">Location</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="griyapancoran">Perumahan Griya Pancoran Mas Indah Blok D1 Nomor 8</string>
    <string name="tipe_rumah">Tipe Rumah</string>
    <string name="luas_bangunan">Luas Bangunan</string>
    <string name="luas_bangunan_">100 m2</string>
    <string name="hewan_lain">Hewan lain yang tinggal</string>
    <string name="jwb_hewan_lain">ada 2 kucing cowo cewe</string>
    <string name="tmpt_tinggal_yg_diadopsi">Tempat tinggal hewan yang diadopsi</string>
    <string name="jwb_tmpt_tinggal_yg_diadopsi">bersama saya, ada kandang kucing juga</string>
    <string name="contact">Contact</string>
    <string name="jwb_alasan">Karena ingin menambah hewan peliharaan</string>
    <string name="email_ferrian">ferrianrp@gmail.com</string>
    <string name="no_wa">Phone Number / WhatsApp</string>
    <string name="tlp_ferrian">081385558854</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="about_content">About you...</string>
    <string name="create">Create</string>
    <string name="desc_accountfrag">if you want to adopt you must have  CV adopt</string>
    <string name="back">Back</string>
    <string name="create_cv">Create CV</string>
    <string name="about_you">About you</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="q1">Mengapa anda ingin mengadopsi hewan ?</string>
    <string name="next">Next</string>
    <string name="before">Before</string>
    <string name="alamat_lengkap_content">Jl Cempaka ACM Blok i 21 Depok , Jawa Barat</string>
    <string name="m2">m2</string>
    <string name="berapa_banyak_orang">"Berapa Banyak orang yang tinggal di bangunan anda "</string>
    <string name="berapa_banyak_hewan">"Berapa banyak hewan lain yang tinggal di bangunan  anda ? Beri penjelasan singkat  "</string>
    <string name="berapa_banyak_hewan_content">"ada 2 kucing ras anggora dan 1 anjing  "</string>
    <string name="dimana_hewan_tinggal">Dimana hewan yang anda ingin adopsi akan tinggal  ? Beri penjelasan singkat</string>
    <string name="dimana_hewan_tinggal_content">bersama saya , di rumah kucing yang tersedia</string>
    <string name="from">"from "</string>
    <string name="age_title">Age</string>
    <string name="age_content_detailadopt">22 Months</string>
    <string name="age_category">Category</string>
    <string name="pets_category_detailadopt">Maincoon</string>
    <string name="reason">Reason</string>
    <string name="abandoned">Abandoned</string>
    <string name="medical_notes_content">"Muffin’s  is  obedient cat . it is love to play with  employer . cute cat , active , agile and clean cat. "</string>
    <string name="desc_content_detailadopt">Muffin’s  is  obedient cat . it is love to play with  employer . cute cat , active , agile and clean cat.  Muffins was given vaksin and flea medicine.</string>
    <string name="apply_as_adopter">Apply as Adopter</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="registering">Registering...</string>
    <string name="success">Success</string>
    <string name="fullname">Fullname</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="this_field_min_char">Minimum 8 characters</string>
    <string name="logging_in">Logging in...</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="about_me">About me</string>
    <string name="province">Province</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="titik_koma">" : "</string>
    <string name="cities">Cities</string>
    <string name="districts">Sub-District</string>
    <string name="village">Village (Kelurahan)</string>
    <string name="save">Save</string>
    <string name="job">Job</string>
    <string name="job_ops">Job (optional)</string>
    <string name="this_field_min5_char">Minimum 5 characters</string>
    <string name="cv_created">Your CV has been created</string>
    <string name="name_user">Your Name</string>
    <string name="city">City</string>
    <string name="email_content">Your email</string>
    <string name="phone_content">Your phone number</string>
    <string name="date_" />
    <string name="price">Price</string>

    <string-array name="pets_category">
        <item>Cat</item>
        <item>Dog</item>
    </string-array>
    <string-array name="cat_type">
        <item>Maincone</item>
        <item>Anggora</item>
    </string-array>

    <string-array name="category_discussion">
        <item>Health</item>
        <item>Food</item>
    </string-array>

    <string-array name="size_pet">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="background_story_pet">
        <item>Stray</item>
        <item>Abandoned</item>
        <item>Abused</item>
        <item>Financial</item>
        <item>Owner Give Up</item>
        <item>Others</item>
    </string-array>


    <string-array name="tipe_rumah">
        <item>Home</item>
        <item>Rent</item>
        <item>Boarding House</item>
        <item>Apartment</item>
        <item>Warehouse</item>
        <item>Others</item>
    </string-array>
</resources>
