<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/container_bot"
        android:background="@drawable/selector_bg_listitem_accentcolor">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/province" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/titik_koma" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/cities" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/titik_koma" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/districts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/titik_koma" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/village" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"
                android:text="@string/titik_koma" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BaseTextBlack"/>
        </TableRow>

    </TableLayout>

</androidx.cardview.widget.CardView>